src/main/java/com/test/coursemanagementspring/core/errors/ForbiddenException.java
package com.test.coursemanagementspring.core.errors;

public class ForbiddenException extends RuntimeException {
    public ForbiddenException(String message) {
        super(message);
    }
}
